# blogger

./: .gitignore  .gitmodules  .ocamlformat  Makefile  README.md  atom.xml  blogger  blogger.opam  dune-project  feed.xml  index.html  rss1.xml
.github/workflows/: build.yml  deploy.yml
articles/: blog.html  blog.md  blog_requiem.html  blog_requiem.md  dependent_java.md  eqaf_release.html  eqaf_release.md  esperanto.html  esperanto.md  existential_java.md  functor_magic.html  functor_magic.md  gadt_and_state_machine.html  gadt_and_state_machine.md  happy_eyeballs.html  happy_eyeballs.md  hello_world.html  hello_world.md  java_proof_theorem.md  lwt_pause.html  lwt_pause.md  miou.html  miou.md  miou_rules.html  miou_rules.md  mirageos_compilation.html  mirageos_compilation.md  mirageos_retreat.html  mirageos_retreat.md  optint.html  optint.md  pasteur.html  pasteur.md  release_cycle_email.html  release_cycle_email.md  reproducible.html  reproducible.md  smtp_1.html  smtp_1.md  smtp_2.html  (+8 more)
capsule/: index.html
capsule/articles/: java_proof_theorem.html
capsule/css/: style.css
css/: fonts.css  style.css
js/: hl.js
pages/: index.md  tags.md
src/: blogger.ml  collection.ml  collection.mli  dune  feed.ml  feed.mli  file.ml  file.mli  model.ml  model.mli  tags.ml  task.ml  task.mli  yocaml_cmarkit.ml
templates/: article.html  index.html  layout.html  list_articles.html  tag.html  tags.html
tmp/: bancos.md  httpcats.md
