opam-version: "2.0"
version: "dev"
synopsis: " The source code of the generator and the content of my blog, naively using YOCaml "
maintainer: "xhtmlboi@gmail.com"
authors: [ "The XHTMLBoy <xhtmlboi@gmail.com>" ]

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

license: "GPL-3.0-or-later"
tags: [ "angry" "cuisine" "nerd" "ocaml" "preface" ]
homepage: "https://github.com/xhtmlboi/blogger"
dev-repo: "git://github.com/xhtmlboi/blogger.git"
bug-reports: "https://github.com/xhtmlboi/blogger/issues"

depends: [
  "ocaml" { >= "4.11.1" }
  "dune" { >= "2.8" }
  "preface" { >= "0.1.0" }
  "logs" {>= "0.7.0" }
  "cmdliner" { >= "1.0.0"}
  "yocaml"
  "yocaml_unix"
  "yocaml_yaml"
  "yocaml_markdown"
  "yocaml_git"
  "yocaml_jingoo"
]

pin-depends: [
  ["yocaml.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_unix.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_yaml.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_markdown.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
  ["yocaml_jingoo.dev" "git+https://github.com/xhtmlboi/yocaml.git"]
]
